[project]
name = "qwen-code"
version = "0.0.1"
description = "Minimal Claude Code clone — local Qwen via Ollama, single-file agent with 4 tools."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
]

[project.scripts]
qwen-code = "agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["agent.py"]
